# DynX

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: api.md  benchmark_reference.md  index.md  makemod.md  old_readme.md
docs/StageCraft/: concepts.md  stage.md  theory.md
docs/api/: api.md
docs/changelog/: CHANGELOG.md
docs/examples/: housing_renting.md
docs/guides/: heptapod-x.md  model_circuit_access.md  stage.md
docs/helpers/: circuit_runner.md
docs/heptapod/: heptapod_b.md
docs/rough/: MODEL_STRUCTURE.md  PeriodsModels.md  circuit_structure.md  computational_elements.md  examples.md  graphs.md  integrate_summary.py  intro.md  modularity.md  theoretical_concordance.md
docs/slides/: presv3_short.tex
docs/theory/: modular_bellman.md
dynx/: __init__.py
dynx/core/: __init__.py  circuit_board.py  eulerian.py  mover.py  perch.py
dynx/heptapodx/: LICENSE  README.md  __init__.py
dynx/runner/: README.md  __init__.py  circuit_runner.py  reference_utils.py  sampler.py  telemetry.py
dynx/stagecraft/: README_config_loader.md  __init__.py  config_loader.py  io.py  makemod.py  model_circuit.py  period.py  saver.py  solmaker.py  stage.py
examples/: README.md  circuit_runner_saving.py  reference_deviation_example.py
examples/circuitCraft/: individual_edges.py  quick_circuit.py  quick_workflow.py
examples/configs/: ConsInd_multi.yml  OWNC_stage.yml  OWNC_stage_with_master.yml  housing_renting_master.yml  manual_grid_example.yml  markov_shock_example.yml
examples/economic_models/: README.md
examples/heptapod-x/: load_consind_multi.py  load_consind_multi_b.py  simple_movers.py
examples/heptapod_b/: README.md  load_housing_with_master.py  manual_shock_example.py  markov_shock_example.py
examples/io/: README.md  branch_dict_example.py  folder_config_example.py  solution_rehydration_example.py
tests/heptapod-x/: test_master_parameter_resolution.py  test_mover_models.py  test_mover_parameter_resolution.py  test_perch_models.py
tests/regression/: test_package_structure.py
(+80 files in other folders)
